# TNCG15-Raytracing

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  ColorDBL.h  ColorRGB.h  Cube.h  Material.h  Mesh.h  Pixel.h  Polygon.h  Ray.h  Rectangle.h  Scene.h  Sphere.h  Tetrahedron.h  Torus.h  Triangle.h  functions.h
src/: Camera.cpp  ColorDBL.cpp  ColorRGB.cpp  Cube.cpp  Mesh.cpp  Pixel.cpp  Polygon.cpp  Ray.cpp  Rectangle.cpp  Scene.cpp  Sphere.cpp  Tetrahedron.cpp  Torus.cpp  Triangle.cpp  functions.cpp  main.cpp
